# fastway_vpn_sdk

./: .gitignore  .gitmodules  README.md  pubspec.yaml
android/: build.gradle  key.properyties  settings.gradle
android/libs/: fastway-core-debug.aar  fastway-core-release.aar  fy-vpn-core-debug.aar
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: proguard-rules.pro
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: fy_vpn_sdk.podspec
ios/Classes/: FyVpnSdkPlugin.h  FyVpnSdkPlugin.m
lib/: fy_vpn_sdk.dart
linux/: CMakeLists.txt  fy_vpn_sdk_plugin.cc
linux/include/fy_vpn_sdk/: fy_vpn_sdk_plugin.h
macos/: fy_vpn_sdk.podspec
macos/Classes/: FyVpnSdkPlugin.swift
test/: fy_vpn_sdk_test.dart
windows/: CMakeLists.txt  fy_vpn_sdk_plugin.cpp
windows/include/fy_vpn_sdk/: fy_vpn_sdk_plugin.h
(+4 files in other folders)
